--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,8 @@ body {
 /* Logo Stili */
 .site-logo {
     position: fixed; /* Sayfa scroll olsa bile sabit kalır */
+    top: 15px;
+    left: 15px;
     z-index: 1000; /* Diğer tüm elementlerin üzerinde olmasını sağlar */
     display: block;
 }
@@ -131,7 +133,7 @@ h2 {
     top: 50%; /* Center vertically */
     left: 0;
     width: 100%;
-    height: 50px; /* Thin line */
+    height: 130px; /* Thin line */
     background-color: orange;
     transform: translateY(-50%); /* Adjust for perfect centering */
     z-index: 0; /* Ensure it's behind the content */
