--- a/public/style.css
+++ b/public/style.css
@@ -92,8 +92,7 @@ h2 {
     z-index: 1; /* Şehir silüetini arkada tutar */
 }
 
-
-
+n
 .hero-content h1 {
     font-size: 2.5rem; /* Mobil için küçültüldü */
     margin-bottom: 10px;
