--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,7 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     margin: 0;
-    background-color: #f0f2f5;
+    background-color: #fff; /* Arka planı beyaz yap */
     color: #333;
     overflow-x: hidden;
 }
@@ -33,7 +33,8 @@ h2 {
     top: 20px;
     left: 20px;
     z-index: 1000;
-    /* Başlangıçta büyük görünmesi için */
+    opacity: 0; /* Başlangıçta görünmez */
+    pointer-events: none; /* Tıklamaları engelle */
 }
 
 .site-logo img {
@@ -51,6 +52,9 @@ h2 {
     text-align: center;
     color: #fff;
     overflow: hidden;
+    background-image: url('/images/bg2.png'); /* Yeni arka plan görseli */
+    background-size: cover; /* Alanı kapla */
+    background-position: center; /* Ortala */
 }
 
 .hero-background {
@@ -68,18 +72,66 @@ h2 {
     object-fit: cover;
 }
 
+.hero-background-pieces {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bg-piece {
+    position: absolute;
+    object-fit: contain; /* Görselin tamamını göster */
+    top: 70%; /* Dikeyde daha da aşağıya */
+    transform: translateY(-50%); /* Kendi yüksekliğine göre ayarla */
+}
+
+.center {
+    width: 350px;
+    height: 350px;
+    z-index: 2;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Yatayda ve dikeyde tam ortala */
+}
+.center-left {
+    width: 350px;
+    height: 350px;
+    left: 50%;
+    transform: translate(calc(-50% - 250px), -50%); /* Ortadaki görselin soluna daha yakın yerleştir */
+    z-index: 1;
+}
+.center-right {
+    width: 350px;
+    height: 350px;
+    left: 50%;
+    transform: translate(calc(-50% + 280px), -50%); /* Ortadaki görselin sağına daha yakın yerleştir */
+    z-index: 1;
+}
+.bottom-right {
+    width: 210px;
+    height: 210px;
+    top: 84%; /* Dikeyde biraz daha aşağıya */
+    left: 50%; /* Yatayda ortadaki ve sağdaki görselin arasına */
+    transform: translate(calc(-50% + 175px), -50%); /* Kendi genişliğine göre ayarla */
+    z-index: 3;
+}
+
 .cloud {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
+    object-fit: cover; /* Görselin tamamını kaplamasını sağla */
     z-index: 1;
 }
 
-.cloud-1 { background-image: url('/images/cloud1.png'); }
-.cloud-2 { background-image: url('/images/cloud2.png'); }
-.cloud-3 { background-image: url('/images/cloud3.png'); }
+.cloud-1 { top: 0; left: 0; }
+.cloud-2 { top: 0; left: 0; }
+.cloud-3 { top: 0; left: 0; }
 
 .hero-logo {
     position: absolute;
@@ -93,7 +145,7 @@ h2 {
 .hero-content {
     position: relative;
     z-index: 2;
-    margin-top: 150px; /* Logonun altına daha fazla boşluk bırakmak için */
+    margin-top: 20px; /* Logonun altına daha az boşluk bırakmak için */
 }
 
 .hero-content h1 {
@@ -124,6 +176,10 @@ h2 {
 }
 
 /* Yatay Kaydırma */
+#sehir {
+    background-color: #fff; /* Arka planı beyaz yap */
+}
+
 .horizontal-scroll-container {
     height: auto; /* Yüksekliği içeriğe göre ayarla */
     width: 100%;
@@ -176,6 +232,12 @@ h2 {
 }
 
 /* Üniversiteler */
+#universiteler {
+    background-image: url('/images/bg1.png');
+    background-repeat: repeat;
+    background-size: auto;
+}
+
 .card-deck {
     display: flex;
     justify-content: space-around;
